crates/service/tests/diagnostics/snapshots/features__diagnostics__undef__block.snap
---
source: crates/service/tests/diagnostics/undef.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 29
        },
        "end": {
          "line": 6,
          "character": 31
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find label `$d` in this scope"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 26
        },
        "end": {
          "line": 8,
          "character": 27
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find label `3` in this scope"
    }
  ]
}
