crates/service/tests/diagnostics/snapshots/features__diagnostics__undef__call_undefined.snap
---
source: crates/service/tests/diagnostics/undef.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 25
        },
        "end": {
          "line": 0,
          "character": 29
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find func `$bar` in this scope"
    }
  ]
}
