crates/service/tests/diagnostics/snapshots/features__diagnostics__undef__data_undefined.snap
---
source: crates/service/tests/diagnostics/undef.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 16
        },
        "end": {
          "line": 7,
          "character": 21
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find data segment `$data` in this scope"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 14
        },
        "end": {
          "line": 8,
          "character": 19
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find data segment `$data` in this scope"
    }
  ]
}
