crates/service/tests/diagnostics/snapshots/features__diagnostics__undef__elem_undefined.snap
---
source: crates/service/tests/diagnostics/undef.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 15
        },
        "end": {
          "line": 7,
          "character": 20
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find elem segment `$elem` in this scope"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 14
        },
        "end": {
          "line": 8,
          "character": 19
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find elem segment `$elem` in this scope"
    }
  ]
}
