crates/service/tests/diagnostics/snapshots/features__diagnostics__undef__global_undefined.snap
---
source: crates/service/tests/diagnostics/undef.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 26
        },
        "end": {
          "line": 0,
          "character": 30
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "cannot find `$bar` in this scope"
    }
  ]
}
