crates/service/tests/diagnostics/snapshots/features__diagnostics__undef__memory_undefined.snap
---
source: crates/service/tests/diagnostics/undef.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 27
        },
        "end": {
          "line": 0,
          "character": 28
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find `0` in this scope"
    }
  ]
}
