crates/service/tests/diagnostics/snapshots/features__diagnostics__undef__param_via_type_def_by_name.snap
---
source: crates/service/tests/diagnostics/undef.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 15
        },
        "end": {
          "line": 4,
          "character": 17
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find param or local `$a` in this scope"
    }
  ]
}
