crates/service/tests/diagnostics/snapshots/features__diagnostics__undef__table_undefined.snap
---
source: crates/service/tests/diagnostics/undef.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 16
        },
        "end": {
          "line": 3,
          "character": 22
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find table `$table` in this scope"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 20
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find table `0` in this scope"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 19
        },
        "end": {
          "line": 8,
          "character": 20
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find table `0` in this scope"
    }
  ]
}
